{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 395,
  "lineage": "fbbb5272-916e-543e-6853-de689a2cf426",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "default-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Default network for the project",
            "id": "projects/data-segment-304402/global/networks/default",
            "name": "default",
            "project": "data-segment-304402",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/default",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/europe-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/asia-east2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/asia-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/europe-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/asia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/asia-northeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/europe-west6/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/europe-north1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/europe-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/asia-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/asia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/southamerica-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-east4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/northamerica-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/asia-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/europe-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/asia-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/australia-southeast1/subnetworks/default"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal-control",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "2379",
                  "2380"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-27T14:18:06.042-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/data-segment-304402/global/firewalls/internal-control",
            "log_config": [],
            "name": "internal-control",
            "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
            "priority": 1000,
            "project": "data-segment-304402",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/firewalls/internal-control",
            "source_ranges": [
              "10.0.46.0/24",
              "192.168.42.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1521",
                  "3368"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-27T14:18:06.053-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/data-segment-304402/global/firewalls/ssh-public",
            "log_config": [],
            "name": "ssh-public",
            "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
            "priority": 1000,
            "project": "data-segment-304402",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/firewalls/ssh-public",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-27T14:18:05.998-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/data-segment-304402/global/firewalls/ssh-workload",
            "log_config": [],
            "name": "ssh-workload",
            "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
            "priority": 1000,
            "project": "data-segment-304402",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/firewalls/ssh-workload",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "workload"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-27T14:18:06.048-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/data-segment-304402/global/firewalls/web-public",
            "log_config": [],
            "name": "web-public",
            "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
            "priority": 1000,
            "project": "data-segment-304402",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/firewalls/web-public",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "canard",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210217",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/zones/us-east1-c/disks/canard"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/data-segment-304402/zones/us-east1-c/instances/canard",
            "instance_id": "5302945138012027845",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "GHRFom8SDrg=",
            "metadata_startup_script": "apt-get -y update \u0026\u0026 apt-get -y upgrade \u0026\u0026 apt-get -y install apache2 \u0026\u0026 systemctl start apache2",
            "name": "canard",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.237.184.69",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
                "network_ip": "192.168.42.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-east1/subnetworks/prod-dmz",
                "subnetwork_project": "data-segment-304402"
              }
            ],
            "project": "data-segment-304402",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/zones/us-east1-c/instances/canard",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "public"
            ],
            "tags_fingerprint": "ubqgePYPDQc=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.devoir1",
            "google_compute_subnetwork.prod-dmz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "etcd1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fedora-coreos-cloud/global/images/fedora-coreos-33-20210201-3-0-gcp-x86-64",
                    "size": 8,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/zones/us-east1-c/disks/etcd1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/data-segment-304402/zones/us-east1-c/instances/etcd1",
            "instance_id": "531664658920602587",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "tFbg1iFej-0=",
            "name": "etcd1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
                "network_ip": "10.0.3.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-east1/subnetworks/mtl-backend",
                "subnetwork_project": "data-segment-304402"
              }
            ],
            "project": "data-segment-304402",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/zones/us-east1-c/instances/etcd1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "backend"
            ],
            "tags_fingerprint": "lw1rxEJIHXc=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.devoir1",
            "google_compute_subnetwork.mtl-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "etcd2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fedora-coreos-cloud/global/images/fedora-coreos-33-20210201-3-0-gcp-x86-64",
                    "size": 8,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/zones/us-east1-c/disks/etcd2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/data-segment-304402/zones/us-east1-c/instances/etcd2",
            "instance_id": "6878391016799828955",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "tFbg1iFej-0=",
            "name": "etcd2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
                "network_ip": "10.0.3.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-east1/subnetworks/mtl-backend",
                "subnetwork_project": "data-segment-304402"
              }
            ],
            "project": "data-segment-304402",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/zones/us-east1-c/instances/etcd2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "backend"
            ],
            "tags_fingerprint": "lw1rxEJIHXc=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.devoir1",
            "google_compute_subnetwork.mtl-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "etcd3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fedora-coreos-cloud/global/images/fedora-coreos-33-20210201-3-0-gcp-x86-64",
                    "size": 8,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/zones/us-east1-c/disks/etcd3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/data-segment-304402/zones/us-east1-c/instances/etcd3",
            "instance_id": "9039409159016512475",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "tFbg1iFej-0=",
            "name": "etcd3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
                "network_ip": "10.0.3.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-east1/subnetworks/mtl-backend",
                "subnetwork_project": "data-segment-304402"
              }
            ],
            "project": "data-segment-304402",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/zones/us-east1-c/instances/etcd3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "backend"
            ],
            "tags_fingerprint": "lw1rxEJIHXc=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.devoir1",
            "google_compute_subnetwork.mtl-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "fermier",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20210224",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/zones/us-east1-c/disks/fermier"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/data-segment-304402/zones/us-east1-c/instances/fermier",
            "instance_id": "8515057849051085787",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "tFbg1iFej-0=",
            "name": "fermier",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
                "network_ip": "10.0.46.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-east1/subnetworks/prod-traitement",
                "subnetwork_project": "data-segment-304402"
              }
            ],
            "project": "data-segment-304402",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/zones/us-east1-c/instances/fermier",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "workload"
            ],
            "tags_fingerprint": "5EUpivCzoVY=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.devoir1",
            "google_compute_subnetwork.prod-traitement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mouton",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fedora-coreos-cloud/global/images/fedora-coreos-33-20210201-3-0-gcp-x86-64",
                    "size": 8,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/zones/us-east1-c/disks/mouton"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/data-segment-304402/zones/us-east1-c/instances/mouton",
            "instance_id": "3150228145376295877",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "tFbg1iFej-0=",
            "name": "mouton",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.185.69.31",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
                "network_ip": "172.16.5.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-east1/subnetworks/prod-interne",
                "subnetwork_project": "data-segment-304402"
              }
            ],
            "project": "data-segment-304402",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/zones/us-east1-c/instances/mouton",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "public"
            ],
            "tags_fingerprint": "ubqgePYPDQc=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.devoir1",
            "google_compute_subnetwork.prod-interne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "devoir1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/data-segment-304402/global/networks/devoir1",
            "mtu": 0,
            "name": "devoir1",
            "project": "data-segment-304402",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mtl-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-27T14:18:06.244-08:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/data-segment-304402/regions/us-east1/subnetworks/mtl-backend",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "mtl-backend",
            "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "data-segment-304402",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-east1/subnetworks/mtl-backend"
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-27T14:18:06.399-08:00",
            "gateway_address": "192.168.42.1",
            "id": "projects/data-segment-304402/regions/us-east1/subnetworks/prod-dmz",
            "ip_cidr_range": "192.168.42.0/24",
            "name": "prod-dmz",
            "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "data-segment-304402",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-east1/subnetworks/prod-dmz"
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-interne",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-27T14:18:06.501-08:00",
            "gateway_address": "172.16.5.1",
            "id": "projects/data-segment-304402/regions/us-east1/subnetworks/prod-interne",
            "ip_cidr_range": "172.16.5.0/24",
            "name": "prod-interne",
            "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "data-segment-304402",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-east1/subnetworks/prod-interne"
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-traitement",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-27T14:18:06.467-08:00",
            "gateway_address": "10.0.46.1",
            "id": "projects/data-segment-304402/regions/us-east1/subnetworks/prod-traitement",
            "ip_cidr_range": "10.0.46.0/24",
            "name": "prod-traitement",
            "network": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/global/networks/devoir1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "data-segment-304402",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-segment-304402/regions/us-east1/subnetworks/prod-traitement"
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    }
  ]
}